JGlideMon ChangeLog

Version 1.1
-----------
- Will now recognize loot in the form of "Received # of item: [Item]."
- Updated mobile version of web interface to support more devices
  (IN PROGRESS).

Version 1.0
-----------
- Development resumes to coincide with the GliderRemoteCompat
  plugin for HonorBuddy.
- Fixed systemic error in the way data was read that often caused
  the screenshot to fail to update. It nearly always works now.
- Item information is retrieved directly from Blizzard's web API since
- AH prices are no longer retrieved for loot since Allakhazam is no
  longer in service and Wowhead's prices seem useless usually.
- The Health/Mana Chart tab no longer displays the yellow target
  health line at 0% when there is no target.
- Corrected level cap to 85, it should work at 90, 95, etc.
- Made *many* improvements to the built-in webserver including a mobile
  device friendly version.
- Changed input fields for sending chat so that they are always visible,
  the last type of chat sent will also be remembered after restarting.
- PHPGlideMon will no longer be updated due to the changes in JGlideMon's
  built-in webserver.

Version 0.18
------------
- Added Death Knight support.
- Fixed health/mana display for users where a comma is used 
  instead of a period for a decimal point.
- Updated Allakhazam item XML URL so item info is retrieved again.

Version 0.17
------------
- Fixed Parse Log File dialog box and added a progress bar
  if the log file is very large.
- Added maximized/fullscreen option to the Screenshot menu.
  F11 toggles in and out of fullscreen mode.
- Fixed extraneous 1 pixel border around the health/mana chart
  that really pissed me off....
- Fixed combat log after 2.4 changes.
- Right clicking anywhere on the health/mana chart will display
  a popup menu where you can disable drawing the mana line.

Version 0.16
------------
- Added a bunch of options to control alerts. See the Alerts
  configuration tab.