@@ -23,7 +23,7 @@ package jgm.wow;
 import java.util.*;
 
 /**
- * Represents one of the 9 WoW classes. Includes
+ * Represents one of the 11 WoW classes. Includes
  * a ManaType field, which would be mana/rage/energy
  * accordingly.
  * @author Tim
@@ -31,16 +31,18 @@ import java.util.*;
  */
 public enum Class {	
 	UNKNOWN ("Unknown"),
-	WARRIOR ("Warrior", ManaType.RAGE),
-	ROGUE   ("Rogue",   ManaType.ENERGY),
+	WARRIOR ("Warrior",      ManaType.RAGE),
+	ROGUE   ("Rogue",        ManaType.ENERGY),
 	HUNTER  ("Hunter"),
 	MAGE    ("Mage"),
 	WARLOCK ("Warlock"),
 	PRIEST  ("Priest"),
 	PALADIN ("Paladin"),
 	SHAMAN  ("Shaman"),
-	DRUID   ("Druid",   ManaType.DRUID),
-	DEATHKNIGHT ("Death Knight", ManaType.RUNE);
+	DRUID   ("Druid",        ManaType.DRUID),
+	DEATHKNIGHT
+	        ("Death Knight", ManaType.RUNE),
+	MONK    ("Monk",         ManaType.DRUID);
 	
 	private String name;
 	public final ManaType mana;
@@ -71,19 +73,12 @@ public enum Class {
 	private static Map<String, Class> strMap = new HashMap<String, Class>();
 	
 	static {
-		strMap.put("warrior", 		WARRIOR);
-		strMap.put("rogue",   		ROGUE);
-		strMap.put("hunter",  		HUNTER);
-		strMap.put("mage",    		MAGE);
-		strMap.put("warlock", 		WARLOCK); 
-		strMap.put("priest",  		PRIEST);
-		strMap.put("paladin", 		PALADIN);
-		strMap.put("shaman",  		SHAMAN);  
-		strMap.put("druid",   		DRUID);
-		strMap.put("deathknight", 	DEATHKNIGHT);
+		for (Class c : Class.values())
+			strMap.put(c.name().toLowerCase(), c);
 	}
 	
 	public static Class strToClass(String s) {	
-		return strMap.get(s.toLowerCase());
+		Class c = strMap.get(s.toLowerCase());
+		return null == c ? UNKNOWN : c;
 	}
 }
